--- a/package.json
+++ b/package.json
@@ -1,14 +1,34 @@
 {
    "name": "100XBuilds",
    "version": "1.0.0",
+   "description": "Marketing & Sales Systems for Luxury Custom Home Builders",
    "main": ".eleventy.js",
    "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1",
-      "dev": "npx eleventy --serve",
-      "build": "eleventy"
+      "dev": "npx @11ty/eleventy --serve",
+      "serve": "npx @11ty/eleventy --serve",
+      "start": "npx @11ty/eleventy --serve",
+      "build": "npx @11ty/eleventy",
+      "clean": "rm -rf _site"
    },
+   "keywords": [
+      "luxury home builders",
+      "construction marketing",
+      "sales systems",
+      "business automation",
+      "custom home builders"
+   ],
+   "author": "100xBuilds",
    "license": "ISC",
+   "engines": {
+      "node": ">=18.0.0"
+   },
    "dependencies": {
       "@11ty/eleventy": "^3.1.2"
-   }
+   },
+   "repository": {
+      "type": "git",
+      "url": "https://github.com/gaegeroot/100xbuilds.git"
+   },
+   "homepage": "https://gaegeroot.github.io/100xbuilds/"
 }
