--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
       "serve": "npx @11ty/eleventy --serve",
       "start": "npx @11ty/eleventy --serve",
       "build": "npx @11ty/eleventy",
-      "build-ghpages": "npx @11ty/eleventy --pathprefix=/100xbuilds/",
+      "build-ghpages": "npx @11ty/eleventy",
       "clean": "rm -rf _site"
    },
    "keywords": [
